--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jank-busting",
   "scripts": {
-    "start" : "npm install && grunt serve"
+    "start": "npm install && grunt serve"
   },
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
@@ -16,16 +16,17 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha": "^0.4.10",
     "grunt-newer": "^0.7.0",
     "grunt-rev": "^0.1.0",
+    "grunt-sass": "^1.2.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.3.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-tasks": "^0.4.0",
+    "sass-math": "^1.0.0",
     "time-grunt": "^0.4.0"
   },
   "engines": {
