--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "jank-busting",
+  "repository": "https://github.com/intuio/Webperf-Demo.git",
+  "license": "MIT",
   "scripts": {
     "start": "npm install && grunt serve"
   },
@@ -15,7 +17,6 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.0",
-    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha": "^0.4.10",
@@ -24,7 +25,6 @@
     "grunt-sass": "^1.2.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.3.0",
-    "jshint-stylish": "^0.4.0",
     "load-grunt-tasks": "^0.4.0",
     "sass-math": "^1.0.0",
     "time-grunt": "^0.4.0"
